--- a/prayuktiwebsite-master/css/main.css
+++ b/prayuktiwebsite-master/css/main.css
@@ -1036,8 +1036,9 @@ header .social-links ul li a:focus {
 .main-content-tablecell #counter {
     display:inline-block;
     position:absolute;
-    left:42%;
-    top:-120%;
+    left:33%;
+    top:170%;
+   
 }
 .main-content-tablecell #counter:before,
 .main-content-tablecell #counter:after {
@@ -1055,7 +1056,7 @@ header .social-links ul li a:focus {
 	text-align: right;
 	color: #FFFFFF;
 	font-family: "roboto-black", sans-serif;
-	font-size: 3.5rem;
+	font-size: 7rem;
 	line-height: 1;
 	padding: 0;
 	margin-bottom: 1.5rem;
@@ -1072,15 +1073,25 @@ header .social-links ul li a:focus {
     position:absolute;
     display:inline-block;
      top:-50%;
-    left:30%;
+    left:27%;
 }
 
  .logo{
       animation: upAnddown 4s infinite;
       height: 170px;
       position:absolute;
-       top:20%;
-      left:40%;
+       top:5%;
+      left:47%;
+}
+
+.sublogo{
+    position:absolute;
+    top:15px;
+}
+
+.hitlogo{
+    height:100px;
+    width:auto;
 }
 
  @keyframes upAnddown{
@@ -1097,29 +1108,33 @@ header .social-links ul li a:focus {
            }
 
 .main-content-tablecell h1 {
-	font-size: 6.5rem;
-	line-height: 1.5;
+	font-size: 8.5rem;
+	line-height: ;
 	color: #FFFFFF;
     letter-spacing: 3px;
 	margin-bottom: 2rem;
-    margin-top:35%;
+    margin-top:15%;
 	max-width: 600px;
 	position: relative;
-    font-family: Rockwell Extra Bold, Rockwell Bold, monospace;
+    font-family: Nexa;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
 }
 .main-content-tablecell p {
 	color: rgba(255, 255, 255, 0.4);
-	font-family: "roboto-regular", sans-serif;
 	font-size: 2rem;
     text-align: center;
-    font-family: Rockwell Extra Bold, Rockwell Bold, monospace;
+    font-family: Nexa Light;
+    letter-spacing:6px;
     font-style: normal;
     font-variant: normal;
     font-weight: 300;
-    line-height: 30.4px;"
+  
+}
+
+.year{
+    font-family:plstk;
 }
 
 .scroll-icon {
@@ -1127,15 +1142,17 @@ header .social-links ul li a:focus {
 	width: 200px;
 	height: 90px;
     top:190%;
-    left:40%;
+    left:80%;
 	border-right: 1px dashed rgba(255, 255, 255, 0.3);
    
 }
 .scroll-icon .scroll-text {
-	font-family: "roboto-bold", sans-serif;
-	font-size: 1.4rem;
+	font-family: "Nexa", sans-serif;
+	font-size: 1.8rem;
 	color: #FFFFFF;
-	margin-top: 1.5rem;
+    letter-spacing:2px;
+	margin-top: 2rem;
+    margin-right:-1rem;
 }
 .scroll-icon .end-top {
 	content: "";
@@ -1196,6 +1213,16 @@ header .social-links ul li a:focus {
 	40% {
 		-webkit-transform: translateY(20px);
 	}
+}
+
+.sponsors{
+    height:80px;
+    width:100%;
+    background-color: white;
+    position:absolute;
+    bottom:0;
+    
+    
 }
 
 /* ------------------------------------------------------------------- 
@@ -1286,17 +1313,16 @@ header .social-links ul li a:focus {
  *
  * ------------------------------------------------------------------- */
 #info {
-	background: #FFFFFF;
-	background-image: url(../images/info-bg.jpg);
-	background-attachment: fixed;
+    height:100vh;
+	background-image:linear-gradient(to right, rgba(192, 193, 192, 0.9),rgba(157, 157, 157, 0.9)),url(../images/info-bg.jpg);
+    background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: top;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
-	padding: 10.2rem 0 9rem;
+	padding: 2rem 9rem;
 	position: relative;
-	color: rgba(17, 17, 17, 0.7);
 }
 #info .info-overlay {
 	position: absolute;
@@ -1304,8 +1330,7 @@ header .social-links ul li a:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #FFFFFF;
-	opacity: .7;
+	opacity: .8;
 }
 
 /* tabs 
